added a button to fund detail to access transfer history

--- a/templates/fund/detail.html
+++ b/templates/fund/detail.html
@@ -36,5 +36,6 @@
 	{% endif %}
 	<a href="{{fund_allocation_link}}" class="btn btn-dark">fund allocation</a>
 	<a href="{{fund_transfer_link}}" class="btn btn-dark">fund transfer</a>
+	<a href="{{fund_transfer_list_link}}" class="btn btn-warning">transfer history</a>
 	<a href="{{go_back_link}}" class="btn btn-info">go back</a>
 {% endblock %}
